fix css misalignment

--- a/app/assets/stylesheets/_mypage.scss
+++ b/app/assets/stylesheets/_mypage.scss
@@ -242,7 +242,6 @@
           a {
             position: relative;
             display: block;
-            min-height: 48px;
             padding: 16px;
             font-size: 14px;
             color: #333;
