--- a/app/assets/stylesheets/private-informations.scss
+++ b/app/assets/stylesheets/private-informations.scss
@@ -1,7 +1,5 @@
-@mixin info_box {
-  width: 100%;
+@mixin private-info_box {
   margin-top: 8px;
-  height: 48px;
   padding: 10px 16px 8px;
   border-radius: 4px;
   border: 1px solid #ccc;
@@ -65,17 +63,29 @@
         line-height: 1.5;
       }
       &__text {
-        @include info_box;
+        @include private-info_box;
+        width: 94%;
       }
-      &__select {
+      &__box {
         position: relative;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none;
-        cursor: pointer;
-        @include info_box;
-        &::-ms-expand {
-          display: none;
+        &__icon {
+          position: absolute;
+          right: 16px;
+          top: 50%;
+          z-index: 2;
+          color: #888;
+          font-size: 18px;
+        }
+        &__select {
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          appearance: none;
+          width: 100%;
+          cursor: pointer;
+          @include private-info_box;
+          &::-ms-expand {
+            display: none;
+          }
         }
       }
 
